# backend/api/alembic/versions/462711bee31f_initial_migration.py
@@ -1,0 +1,49 @@
+"""Initial migration
+
+Revision ID: 462711bee31f
+Revises: None
+Create Date: 2026-05-20 18:12:05.662117
+
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+
+
+# revision identifiers, used by Alembic.
+revision: str = '462711bee31f'
+down_revision: Union[str, None] = None
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    with op.batch_alter_table('system_settings', schema=None) as batch_op:
+        batch_op.alter_column('key',
+               existing_type=sa.NUMERIC(),
+               type_=sa.String(),
+               nullable=False)
+        batch_op.alter_column('value',
+               existing_type=sa.NUMERIC(),
+               type_=sa.String(),
+               existing_nullable=False)
+
+    with op.batch_alter_table('tasks', schema=None) as batch_op:
+        batch_op.create_unique_constraint('uq_tasks_ticket_number', ['ticket_number'])
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_constraint(None, 'tasks', type_='unique')
+    op.alter_column('system_settings', 'value',
+               existing_type=sa.String(),
+               type_=sa.NUMERIC(),
+               existing_nullable=False)
+    op.alter_column('system_settings', 'key',
+               existing_type=sa.String(),
+               type_=sa.NUMERIC(),
+               nullable=True)
+    # ### end Alembic commands ###
